--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^2.3.0",
     "apexcharts": "^4.5.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
